# alert-triage

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  pyproject.toml  system-prompt.example.md
.github/workflows/: ci.yml  release.yml
alert_triage/: __init__.py  app.py  config.py  incidents.py  investigation.py  notifications.py  tools.py
